source/stylesheets/_foundation_and_overrides.scss
@charset "UTF-8";

@import 'variables';

@import
//  "foundation/components/accordion",
//  "foundation/components/alert-boxes",
//  "foundation/components/block-grid",
//  "foundation/components/breadcrumbs",
//  "foundation/components/button-groups",
//  "foundation/components/buttons",
//  "foundation/components/clearing",
//  "foundation/components/dropdown",
//  "foundation/components/dropdown-buttons",
//  "foundation/components/flex-video",
//  "foundation/components/forms",
//  "foundation/components/grid",
//  "foundation/components/inline-lists",
//  "foundation/components/joyride",
//  "foundation/components/keystrokes",
//  "foundation/components/labels",
//  "foundation/components/magellan",
//  "foundation/components/orbit",
//  "foundation/components/pagination",
//  "foundation/components/panels",
//  "foundation/components/pricing-tables",
//  "foundation/components/progress-bars",
//  "foundation/components/reveal",
//  "foundation/components/side-nav",
//  "foundation/components/split-buttons",
//  "foundation/components/sub-nav",
//  "foundation/components/switch",
//  "foundation/components/tables",
//  "foundation/components/tabs",
//  "foundation/components/thumbs",
//  "foundation/components/tooltips",
  "foundation/components/top-bar",
  "foundation/components/offcanvas",
  "foundation/components/visibility",
  "foundation/components/type";

.top-bar .name {
  h1 {
    font-size: $h3-font-size;
    @media #{$large-up} {
      font-size: $h2-font-size;
    }
    a {
      color: $header-font-color;
      display: inline;
    }
  }
}

